--- a/PruebaDom.css
+++ b/PruebaDom.css
@@ -10,9 +10,13 @@
   color: #CEE3F6;
 }
 
-.tabla{
+table, td, th{
   border: 1px solid black;
-  font-family: arial, sans-serif;
+  /* font-family: arial, sans-serif; */
   border-collapse: collapse;
-  width: 100%;
+  /* width: 100%; */
+}
+
+button{
+  cursor: pointer;
 }
