--- a/07_DOM/registro.css
+++ b/07_DOM/registro.css
@@ -1,4 +1,59 @@
+body{
+  background-image: url("https://i.pinimg.com/564x/bc/c6/f9/bcc6f9d241cc9e100c7a91f7b70613b5.jpg");
+  background-size: cover;
+}
+
 .welcome{
   text-align: center;
-  color: green;
+  color: pink;
+}
+
+.puntasBallet{
+  border-radius: 100%;
+  border-color: #3B0B17;
+  text-align: center;
+  border-image: url(border.png) 30 stretch; */
+  border-style: double;
+}
+
+.cajitaPuntas{
+  display: flex;
+  justify-content: center;
+}
+
+.registro{
+  background-color: pink;
+  margin-left: 580px;
+  margin-right: 600px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  width: 200px;
+  height: 250;
+  border-radius: 25%;
+  justify-content: center;
+}
+
+.dato{
+  text-shadow: 2px 2px #F7819F;
+  /* color: #2A0A12; */
+  color: #3B0B17;
+  font-size: 30px;
+}
+
+.registrate{
+  border-radius: 10px;
+  border-color: #3B0B17;
+  background-color: #F8E0E6;
+  width: 100px;
+  height: 30px;
+  font-size: 15px;
+  font-family: sans-serif;
+  margin-top: 5px;
+}
+
+.ingreso{
+  border-radius: 8px;
+  height: 20px;
+  border-color: pink;
 }
