Cambios, inicio proyecto en codigo

--- a/07_DOM/registro.css
+++ b/07_DOM/registro.css
@@ -1,5 +1,6 @@
 body{
-  background-image: url("https://i.pinimg.com/564x/bc/c6/f9/bcc6f9d241cc9e100c7a91f7b70613b5.jpg");
+  /* background-image: url("https://i.pinimg.com/564x/bc/c6/f9/bcc6f9d241cc9e100c7a91f7b70613b5.jpg"); */
+  background-image: url("https://i.pinimg.com/236x/3b/8d/8d/3b8d8d2d2cdccd48b751cf8431230ba7.jpg");
   background-size: cover;
 }
 
