--- a/Dewr.css
+++ b/Dewr.css
@@ -30,3 +30,80 @@
   position: absolute;
   margin-top: 200px;
 }
+.libr {
+  position: absolute;
+  margin-top: 190px;
+  margin-left: 100px;
+  font-family: "Alice in Wonderland";
+  font-size: 50px;
+  font-weight: bold;
+  color: #120A2A;
+}
+.parr {
+  position: absolute;
+  height: 260px;
+  width: 170px;
+  font-family: "Alice in Wonderland";
+  font-weight: bold;
+  color: #2A120A;
+  font-size: 25px;
+  align-content: center;
+  margin-left: 65px;
+  margin-top: 260px;
+}
+
+
+.pes {
+  position: absolute;
+  border-radius: 200px;
+  border-image: url("http://www.madhusudanimpex.com/img/import/onyx/blue.jpg");
+  margin-left: 900px;
+  margin-top: 10px;
+  height: 300px;
+  width: 300px;
+  background-image: url("http://www.madhusudanimpex.com/img/import/onyx/blue.jpg");
+  font-family: "Alice in Wonderland";
+  font-weight: bold;
+  font-size: 50px;
+  padding-bottom: 130px;
+  cursor: pointer;
+}
+.modalPer {
+ display: none;
+ position: fixed;
+ z-index: 1;
+ width: 100%;
+ height: 100%;
+ overflow: auto;
+ background-image: url("https://i.pinimg.com/564x/20/53/fb/2053fb56e8ec9cbe94a2f5543c3181c8.jpg");
+ background-size: cover;
+}
+.persContenido {
+ background-image: url("https://cdn.pixabay.com/photo/2016/06/29/23/15/background-1488018_960_720.jpg");
+ margin: 15% auto;
+ padding: 20px;
+ border: 1px solid #5F4C0B;
+ width: 60%;
+}
+.close {
+ color: #aaa;
+ float: right;
+ font-size: 28px;
+ font-weight: bold;
+}
+.close:hover{
+ color: black;
+ text-decoration: none;
+ cursor: pointer;
+}
+
+
+
+.jinn {
+  position: absolute;
+  height: 140px;
+  margin-left: 970px;
+  margin-top: 150px;
+}
+.map {
+}
