--- a/La amenaza.css
+++ b/La amenaza.css
@@ -1,7 +1,7 @@
 .back {
   background-size: cover;
 }
-.rain {
+.snow {
   position: absolute;
   margin-left: -1px;
   filter: brightness(90%);
@@ -41,10 +41,10 @@
 }
 .libr {
   position: absolute;
-  margin-top: 190px;
-  margin-left: 100px;
+  margin-top: 200px;
+  margin-left: 85px;
   font-family: "Alice in Wonderland";
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold;
   color: #120A2A;
 }
@@ -55,7 +55,7 @@
   font-family: "Alice in Wonderland";
   font-weight: bold;
   color: #2A120A;
-  font-size: 25px;
+  font-size: 23.5px;
   align-content: center;
   margin-left: 65px;
   margin-top: 260px;
@@ -125,7 +125,7 @@
   font-family: "Alice in Wonderland";
   font-weight: bold;
   font-size: 40px;
-  padding-bottom: 160px;
+  padding-bottom: 130px;
   cursor: pointer;
 }
 .modalAcce {
@@ -175,8 +175,8 @@
   background-image: url("http://www.madhusudanimpex.com/img/import/onyx/blue.jpg");
   font-family: "Alice in Wonderland";
   font-weight: bold;
-  font-size: 35px;
-  padding-bottom: 160px;
+  font-size: 50px;
+  padding-bottom: 140px;
   cursor: pointer;
 }
 .modalGal {
@@ -216,31 +216,38 @@
 
 .jinn {
   position: absolute;
-  height: 140px;
-  margin-left: 700px;
-  margin-top: 430px;
+  width: 250px;
+  margin-left: 660px;
+  margin-top: 435px;
 }
 .perr {
   position: absolute;
   height: 200px;
-  margin-left: 955px;
+  margin-left: 940px;
   margin-top: 90px;
+  filter: brightness(0%);
+}
+.per {
+  position: absolute;
+  height: 70px;
+  margin-left: 1050px;
+  margin-top: 100px;
   filter: brightness(0%);
 }
 .spee {
   position: absolute;
-  height: 145px;
+  height: 160px;
   transform: rotate(-135deg);
   margin-left: 520px;
-  margin-top: 150px;
+  margin-top: 130px;
 }
 .arr {
   position: absolute;
   filter: brightness(0%);
-  height: 70px;
-  transform: rotate(45deg);
-  margin-left: 480px;
-  margin-top: 185px;
+  height: 160px;
+  transform: rotate(-45deg);
+  margin-left: 510px;
+  margin-top: 135px;
 }
 .prs {
   font-weight: bold;
