--- a/proyecto.css
+++ b/proyecto.css
@@ -298,8 +298,45 @@ font-weight: 100;
   }
   .lugarBoton{
     margin-right: 150px;
+    background-color: palevioletred;
+    border: palevioletred;
   }
   
   /* .modal-backdrop.show {
     opacity: 0 !important;
   } */
+
+  .cartImg{
+    justify-content: center;
+    display: flex;
+    width: 520px;
+    height: 550px;
+    margin-left: 430px;
+  }
+  .marginCartItems{
+      margin-left: 200px;
+      
+  }
+  .textoCarrito{
+      font-size: 60px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      text-align: center;
+      color: rgb(77, 20, 58);
+  }
+  .total1{
+    font-size: 30px;
+    text-align: center;
+  }
+  .botonCancelar{
+      margin-left: 565px;
+      color:rgb(250, 250, 250);
+      background-color: crimson;
+     border-radius: 15px;
+     border:crimson;
+      font-size: 20px;
+      transition: background-color .5s;
+      
+  }
+  .botonCancelar:hover{
+      background-color: rgb(156, 24, 97);
+  }
