--- a/PROYECTO LE MONDE/CART.css
+++ b/PROYECTO LE MONDE/CART.css
@@ -117,3 +117,15 @@ a:hover {
   padding-bottom: 100%;
 }
 
+.botonCartClear{
+  background: #000000;
+  border: .1em solid #ffffff;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  color: #ffffff;
+  display: flex;
+    width: fit-content;
+    padding: 1em;
+    align-self: center;
+}
